--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Build directory
+bld/
+
 # Prerequisites
 *.d
 
@@ -42,6 +45,11 @@
 *.idb
 *.pdb
 
+# Profiling files
+*.gcno
+*.gcda
+*.gcov
+
 # Kernel Module Compile Results
 *.mod*
 *.cmd
@@ -50,3 +58,4 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
