--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+bin/
+
 # Prerequisites
 *.d
 
@@ -41,6 +43,11 @@
 *.su
 *.idb
 *.pdb
+
+# Profiling files
+*.gcno
+*.gcda
+*.gcov
 
 # Kernel Module Compile Results
 *.mod*
