--- a/.travis.yml
+++ b/.travis.yml
@@ -12,9 +12,8 @@ before_install:
         - sudo apt-get update
         - sudo apt-get install gcc-snapshot -y
         - sudo apt-get update
-        - sudo apt-get install gcc-8 gcov-8 -y
-        - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 60
-        - sudo update-alternatives --install /usr/bin/gcc gcov /usr/bin/gcov-8 60
+        - sudo apt-get install gcc-8 y
+        - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 60 --slave /usr/bin/gcov gcov /usr/bin/gcov-8
 
 script:
         - make
