Add missing hyphen before '-y' flag on gcov update instruction

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ before_install:
         - sudo apt-get update
         - sudo apt-get install gcc-snapshot -y
         - sudo apt-get update
-        - sudo apt-get install gcc-8 y
+        - sudo apt-get install gcc-8 -y
         - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 60 --slave /usr/bin/gcov gcov /usr/bin/gcov-8
 
 script:
