--- a/.travis.yml
+++ b/.travis.yml
@@ -13,7 +13,8 @@ before_install:
         - sudo apt-get install gcc-snapshot -y
         - sudo apt-get update
         - sudo apt-get install gcc-8 -y
-        - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 60 --slave /usr/bin/gcov gcov /usr/bin/gcov-8
+        - sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-8 60 \
+          --slave /usr/bin/gcov gcov /usr/bin/gcov-8
 
 script:
         - make
