--- a/.travis.yml
+++ b/.travis.yml
@@ -15,12 +15,12 @@
 # 	<abhishek@taranjali.org>
 #
 # License:
-# 	Released under the GNU General Public License version 3 (GPLv3).
-# 	<http://opensource.org/licenses/GPL-3.0>
-# 	See the accompanying README.md file for complete licensing details.
+# 	Released under the GNU General Public License version 3 (GPLv3)
+# 	<http://opensource.org/licenses/GPL-3.0>. See the accompanying LICENSE
+# 	file for complete licensing details.
 #
-# 	By continuing to use and/or distribute this file, you acknowledge that
-# 	you have understood these license terms and accept them.
+# 	BY CONTINUING TO USE AND/OR DISTRIBUTE THIS FILE, YOU ACKNOWLEDGE THAT
+# 	YOU HAVE UNDERSTOOD THESE LICENSE TERMS AND ACCEPT THEM.
 ################################################################################
 
 
