Replace 'less' with 'cat' to output test log
Signed-off-by: Abhishek Chakravarti <abhishek@taranjali.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -58,7 +58,7 @@ before_install:
 #       Build target
 script:
         - make integration
-        - less bld/test.log
+        - cat bld/test.log
 
 
 
